--- a/client/package.json
+++ b/client/package.json
@@ -3,28 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "1.0.7"
+    "react-scripts": "^3.4.3"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
-    "history": "^4.6.3",
-    "react": "^15.4.2",
+    "3": "^2.1.0",
+    "-": "0.0.1",
+    "bootstrap": "^4.5.2",
+    "history": "^5.0.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
+    "react": "^16.13.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
-    "reactstrap": "^4.8.0",
-    "react-bootstrap-table": "^3.1.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "react-transition-group": "^1.2.0",
-    "redux": "^3.6.0",
-    "redux-saga": "^0.15.4"
+    "react-bootstrap-table": "^4.3.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.1",
+    "reactstrap": "^8.5.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
