--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.0.1",
   "private": true,
   "babel": {
-    "presets": ["es2015", "stage-0"]
+    "presets": [
+      "es2015",
+      "stage-0"
+    ]
   },
   "dependencies": {
-    "babel-core": "6.25.0",
+    "babel-core": "^6.26.3",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
-    "express": "4.15.3",
-    "mysql": "^2.11.1"
+    "express": "^4.17.1",
+    "jquery": "^3.5.1",
+    "mysql": "^2.18.1"
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
@@ -18,6 +22,6 @@
     "client": "node start-client.js"
   },
   "devDependencies": {
-    "concurrently": "^3.1.0"
+    "concurrently": "^5.3.0"
   }
 }
